// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: FormError ui both errors: Component: FormError => ui => has both errors 1`] = `
<Fragment>
  <FormFeedback
    key="ERROR_REQUIRED"
    tag="div"
  >
    Name is required
  </FormFeedback>
  <FormFeedback
    key="back-end error"
    tag="div"
  >
    back-end error
  </FormFeedback>
</Fragment>
`;

exports[`Component: FormError ui has back-end errors: Component: FormError => ui => has back-end errors 1`] = `
<Fragment>
  <FormFeedback
    key="back-end error"
    tag="div"
  >
    back-end error
  </FormFeedback>
</Fragment>
`;

exports[`Component: FormError ui has front-end errors: Component: FormError => ui => has front-end errors 1`] = `
<Fragment>
  <FormFeedback
    key="ERROR_REQUIRED"
    tag="div"
  >
    Name is required
  </FormFeedback>
</Fragment>
`;
